# sgcodecampus_project

./: .gitignore  main.py  pyproject.toml  requirements.txt
.upm/: store.json
BlogApp/: __init__.py  app.db  forms.py  models.py
BlogApp/templates/: base.html  profile_base.html
BlogApp/templates/admin_access_only/: add_announcement.html  add_merch.html  edit_announcement.html  edit_merch.html
BlogApp/templates/auth/: login.html
BlogApp/templates/blog/: display_personal_post.html  display_post.html  edit_comment.html  edit_post.html
BlogApp/templates/general/: contact_us.html  featured_blogs.html  our_history.html  our_people.html  your_blogs.html  your_role.html
BlogApp/templates/messaging/: display_message.html
BlogApp/templates/profile/: dashboard.html  ext_profile.html
BlogApp/templates/trashed/: cart.html  checkout_form.html  home_trashed.html
BlogApp/utilities/: email.py
BlogApp/views/: auth.py  blog.py  general.py  profile.py
