[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
Flask-WTF = "^1.0.1"
gingerit = "^0.8.2"
Flask-SQLAlchemy = "^2.5.1"
itsdangerous = "^2.1.2"
email-validator = "^1.1.3"
Flask-Caching = "^1.10.1"
networkx = "^2.8"
readtime = "^1.1.1"
Flask-Mail = "^0.9.1"
nltk = "^3.7"
Flask = "^2.1.1"
Flask-Login = "^0.6.0"
Werkzeug = "^2.1.1"
pandas = "^1.4.2"
WTForms = "^3.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"